            Added documentation explaining how to close linear positions, their funcs parameters and correct formatting of response.

        cancel_order():
            Added documentation explaining how to cancel orders, their funcs parameters and correct formatting of response.

        cancel_all_orders():
            Added documentation explaining how to cancel orders, their funcs parameters and correct formatting of response.

        amend_order():
            Added documentation explaining how to modify orders, the function parameters and correct formatting of response.
        
        get_order_history():
            Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for order history, 
            possibility to display raw request response, or display simple list of all open orders.

    Account:
        get_account_info():
            Added possibility to display human readable type of account and type of margin mode, or raw request response.




        
Mic:
    account:
        get_wallet_balance():
            Added possibility to display pie chart of wallet balance for jupyter notebooks, possibiity to display raw request response
            or display a formatted more readable response. 
            Added documentation: now you can see that accountType is a required parameter. 

    Market:
        get_kline():
            Added possibility to display plot of closed price and volume for jupyter notebooks, possibiity to display raw request response
            or to provide a formatted response which shows a list containing all the prices of a determined type (open, low, high or close),
            also to provide the link to the Bybit Kline page and possibilty to save the Kline data as a CSV file.

        get_mark_price_kline():
            Same as get_kline(), but without link available.

        get_index_price_kline():
            Same as get_kline(), but without link available.